--- a/.gitignore
+++ b/.gitignore
@@ -1,176 +1,176 @@
-# Criado por https://www.toptal.com/developers/gitignore/api/python
-# Edite em https://www.toptal.com/developers/gitignore?templates=python
+# Created by https://www.toptal.com/developers/gitignore/api/python
+# Edit at https://www.toptal.com/developers/gitignore?templates=python
 
-### Pitão ###
-# Arquivos DLL compilados/otimizados em bytes
+### Python ###
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[bacalhau]
+*.py[cod]
 *$py.class
 
-# Extensões C
-*.então
+# C extensions
+*.so
 
-# Distribuição / embalagem
-.Pitão
-construir/
-desenvolver-ovos/
-distância/
-Transferências/
-ovos/
-.ovos/
-biblioteca/
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
 lib64/
-partes/
+parts/
 sdist/
 var/
-rodas/
-compartilhar/rodas-python/
-*.informações-do-ovo/
-.instalado.cfg
-*.ovo
-MANIFESTO
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Instalador Py
-# Normalmente esses arquivos são escritos por um script python a partir de um modelo
-# antes que o PyInstaller crie o exe, para injetar data/outras informações nele.
-*.manifesto
-*.especificação
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# Logs do instalador
+# Installer logs
 pip-log.txt
-pip-delete-este-diretório.txt
+pip-delete-this-directory.txt
 
-# Teste de unidade / relatórios de cobertura
+# Unit test / coverage reports
 htmlcov/
 .tox/
 .nox/
-.cobertura
-.cobertura.*
+.coverage
+.coverage.*
 .cache
-testes de nariz.xml
-cobertura.xml
-*.cobrir
-*.py,capa
-.hipótese/
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
 .pytest_cache/
-cobrir/
+cover/
 
-# Traduções
+# Translations
 *.mo
-*.Panela
+*.pot
 
-# Coisas do Django:
-*.registro
-configurações_locais.py
-banco de dados.sqlite3
-db.sqlite3-diário
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
-# Coisas de frasco:
-instância/
+# Flask stuff:
+instance/
 .webassets-cache
 
-# Coisas estranhas:
-.rascunho
+# Scrapy stuff:
+.scrapy
 
-# Documentação do Sphinx
-docs/_construção/
+# Sphinx documentation
+docs/_build/
 
-# Construtor Py
+# PyBuilder
 .pybuilder/
-alvo/
+target/
 
-# Caderno Jupyter
-.pontos de verificação do ipynb
+# Jupyter Notebook
+.ipynb_checkpoints
 
-#IPython
-perfil_padrão/
+# IPython
+profile_default/
 ipython_config.py
 
 # pyenv
-# Para uma biblioteca ou pacote, você pode querer ignorar esses arquivos, pois o código é
-# destinado a ser executado em vários ambientes; caso contrário, faça o check-in:
-# .versão-python
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
 
 # pipenv
-# De acordo com pypa/pipenv#598, é recomendado incluir Pipfile.lock no controle de versão.
-# No entanto, em caso de colaboração, se houver dependências específicas da plataforma ou dependências
-# não tendo suporte multiplataforma, o pipenv pode instalar dependências que não funcionam, ou não
-# instale todas as dependências necessárias.
-#ArquivoPip.bloqueio
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
 
-# poesia
-# Semelhante ao Pipfile.lock, geralmente é recomendado incluir poetry.lock no controle de versão.
-# Isto é especialmente recomendado para pacotes binários para garantir a reprodutibilidade e é mais
-# comumente ignorado para bibliotecas.
-# https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poesia.lock
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries.
+#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+#poetry.lock
 
 # pdm
-# Semelhante ao Pipfile.lock, geralmente é recomendado incluir pdm.lock no controle de versão.
-#pdm.bloqueio
-# pdm armazena configurações de todo o projeto em .pdm.toml, mas é recomendado não incluí-lo
-# no controle de versão.
-# https://pdm.fming.dev/#use-with-ide
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+#pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/#use-with-ide
 .pdm.toml
 
-# PEP 582; usado por exemplo github.com/David-OConnor/pyflow e github.com/pdm-project/pdm
-__pacotes py__/
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+__pypackages__/
 
-# Coisas de aipo
-celerybeat-programação
+# Celery stuff
+celerybeat-schedule
 celerybeat.pid
 
-# Arquivos analisados ​​pelo SageMath
+# SageMath parsed files
 *.sage.py
 
-# Ambientes
+# Environments
 .env
 .venv
-ambiente/
+env/
 venv/
-Ambiente/
+ENV/
 env.bak/
 venv.bak/
 
-# Configurações do projeto Spyder
-.projeto espião
-.projeto espião
+# Spyder project settings
+.spyderproject
+.spyproject
 
-# Configurações do projeto de corda
-.projeto de corda
+# Rope project settings
+.ropeproject
 
-# documentação do mkdocs
+# mkdocs documentation
 /site
 
-# meupy
-.meu_cache/
+# mypy
+.mypy_cache/
 .dmypy.json
 dmypy.json
 
-# Verificador de tipo de pira
-.pira/
+# Pyre type checker
+.pyre/
 
-# analisador de tipo estático pytype
-.tipo py/
+# pytype static type analyzer
+.pytype/
 
-# Símbolos de depuração do Cython
-depuração_cython/
+# Cython debug symbols
+cython_debug/
 
-#PyCharm
-# O modelo específico do JetBrains é mantido em um JetBrains.gitignore separado que pode
-# pode ser encontrado em https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-# e pode ser adicionado ao gitignore global ou mesclado neste arquivo. Para um mais nuclear
-# opção (não recomendada) você pode descomentar o seguinte para ignorar toda a pasta de ideias.
-#.ideia/
+# PyCharm
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+#  and can be added to the global gitignore or merged into this file.  For a more nuclear
+#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+#.idea/
 
-### Patch do Python ###
-# Arquivo de configuração local do Poetry - https://python-poetry.org/docs/configuration/#local-configuration
-poesia.toml
+### Python Patch ###
+# Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
+poetry.toml
 
 # ruff
 .ruff_cache/
 
-# Arquivos de configuração LSP
+# LSP config files
 pyrightconfig.json
 
-# Fim de https://www.toptal.com/developers/gitignore/api/python
+# End of https://www.toptal.com/developers/gitignore/api/python
